[package]
name = "robot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.13.0" # HTML libs
reqwest = { version = "0.11.10", features = [
    "blocking",
    "json",
] } # HTTP request libs
surf = "2.3.2" # HTTP client framework
tokio = { version = "1.17.0", features = ["full"] } # Async libs
futures = "0.3.21" # Async result libs
